<resources>
    <string name="app_name" translatable="false">SlackCheck</string>
    <string name="alphabet">Alphabet</string>
    <string name="price">Price</string>
    <string name="search_to_start">To find the best prices, click on the search icon above!</string>
    <string name="no_results_title">We did not find anything.</string>
    <string name="no_results_subtext">Check your internet connection or search for something else.</string>
    <string name="description_label">Description</string>
    <string name="go_to_shop">Buy (%1$.2f €)</string>
    <string name="price_history">Price history</string>
    <string name="no_description">No description available</string>
    <string name="search">Search</string>
    <string name="product_image">Product Image</string>
    <string name="trendIndicator">Trend Indicator</string>
    <string name="app_logo">App Logo</string>
    <string name="formatted_price">%1$.2f €</string>
    <string name="loading">Loading…</string>
    <string name="queryhint">Search Items here…</string>
    <string name="no_history">No histroy available. Either this item is new or the platform doesn\'t permit storing data.</string>
    <string name="ImageError">Image could not load</string>
    <string name="increasing">Low to High</string>
    <string name="decreasing">High to Low</string>
    <string name="growth">Growth</string>
</resources>