<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:queryHint="@string/queryhint"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/SortAlpha"
        android:title="@string/alphabet"
        app:showAsAction="never"/>

    <item
        android:id="@+id/PriceSubMenu"
        android:title="@string/price">
        <menu>
            <item
                android:id="@+id/SortPriceInc"
                android:title="@string/increasing"
                app:showAsAction="never"/>
            <item
                android:id="@+id/SortPriceDec"
                android:title="@string/decreasing"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/GrowthSubMenu"
        android:title="@string/growth">
        <menu>
            <item
                android:id="@+id/SortGrowthInc"
                android:title="@string/increasing"
                app:showAsAction="never"/>
            <item
                android:id="@+id/SortGrowthDec"
                android:title="@string/decreasing"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>